--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -203,8 +203,8 @@
 			</tr>
 		{% for entry in swapUserList %}
 			<tr class='ui-row {% if entry.internal == True %} ui-row-internal {% endif %}'>
-				<td class='userid b-r'> {{ entry.user.id }} </td>
-				<td class='name b-r' title='{{ entry.user.phone_number }}' > <a target=_blank href='/strand/api/swap_inbox?user_id={{ entry.user.id }}'>{{ entry.user.display_name}}</a></td>
+				<td class='userid b-r' title='{{ entry.user.phone_number }}'> <a target=_blank href='/strand/api/swap_inbox?user_id={{ entry.user.id }}'>{{ entry.user.id }}</a></td>
+				<td class='name b-r'> {{ entry.user.display_name}}</td>
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
 				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>	
 				<td class='gps-count center b-r'> {{ entry.photosWithGPS|floatformat:0 }}</td>					
