--- a/strand/iOS/Strand/Strand/DFNoTableItemsView.xib
+++ b/strand/iOS/Strand/Strand/DFNoTableItemsView.xib
@@ -53,6 +53,7 @@
                 <constraint firstItem="0JM-va-gYd" firstAttribute="centerX" secondItem="5o1-IU-s0a" secondAttribute="centerX" id="mwt-LC-Kv2"/>
                 <constraint firstItem="5o1-IU-s0a" firstAttribute="top" secondItem="WH2-z2-97B" secondAttribute="bottom" constant="8" id="tCb-RQ-f1r"/>
             </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
             <connections>
                 <outlet property="activityIndicator" destination="lU9-hh-vj8" id="Nr7-MA-iAt"/>
                 <outlet property="button" destination="0JM-va-gYd" id="xDc-sk-uwY"/>
