--- a/strand/iOS/Strand/Strand/DFHomeViewController.xib
+++ b/strand/iOS/Strand/Strand/DFHomeViewController.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFHomeViewController">
@@ -11,8 +10,6 @@
                 <outlet property="buttonBar" destination="MYj-g7-RXb" id="qNg-qC-YE9"/>
                 <outlet property="collectionView" destination="kHh-uZ-vK1" id="QzN-eD-Y9P"/>
                 <outlet property="flowLayout" destination="kcj-Dt-vx5" id="xF5-Md-2po"/>
-                <outlet property="reviewBadgeView" destination="BWa-FG-aqQ" id="NdO-Qj-ZFx"/>
-                <outlet property="reviewButton" destination="2fP-Ad-UAv" id="MMB-ke-WNW"/>
                 <outlet property="sendBadgeView" destination="Pba-eB-LD4" id="gfR-4r-0xC"/>
                 <outlet property="sendButton" destination="sao-uL-Ezk" id="sdY-qw-l1R"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -24,94 +21,55 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MYj-g7-RXb" userLabel="Button bar">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="89"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="106"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QUv-33-Ffw" userLabel="ReviewWrapper">
-                            <rect key="frame" x="0.0" y="0.0" width="300" height="89"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fP-Ad-UAv">
-                                    <rect key="frame" x="218" y="8" width="62" height="62"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="62" id="Dv0-Ad-sfz"/>
-                                        <constraint firstAttribute="width" constant="62" id="Nn4-oV-lmT"/>
-                                    </constraints>
-                                    <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
-                                    <state key="normal" backgroundImage="Assets/Icons/HomeInbox.png">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="reviewButtonPressed:" destination="-1" eventType="touchUpInside" id="GuO-zE-IL3"/>
-                                    </connections>
-                                </button>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BWa-FG-aqQ" customClass="LKBadgeView">
-                                    <rect key="frame" x="260" y="3" width="30" height="20"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="30" id="HdB-in-hUs"/>
-                                        <constraint firstAttribute="height" constant="20" id="J9I-XI-mz7"/>
-                                    </constraints>
-                                </view>
-                            </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos to Send" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KTE-xE-giG">
+                            <rect key="frame" x="253" y="10" width="94" height="16"/>
                             <constraints>
-                                <constraint firstItem="2fP-Ad-UAv" firstAttribute="top" secondItem="BWa-FG-aqQ" secondAttribute="top" constant="5" id="GTw-1L-rtO"/>
-                                <constraint firstItem="2fP-Ad-UAv" firstAttribute="trailing" secondItem="BWa-FG-aqQ" secondAttribute="trailing" constant="-10" id="IZZ-UA-Vvb"/>
-                                <constraint firstItem="2fP-Ad-UAv" firstAttribute="top" secondItem="QUv-33-Ffw" secondAttribute="top" constant="8" id="c0z-b9-K7s"/>
-                                <constraint firstAttribute="trailing" secondItem="2fP-Ad-UAv" secondAttribute="trailing" constant="20" id="ceS-4K-0s2"/>
+                                <constraint firstAttribute="height" constant="16" id="UOe-4h-oTc"/>
                             </constraints>
-                        </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AFb-Nj-ssH" userLabel="SendWrapper">
-                            <rect key="frame" x="301" y="0.0" width="299" height="89"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sao-uL-Ezk" userLabel="Send">
-                                    <rect key="frame" x="20" y="8" width="62" height="62"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="62" id="NpX-MF-4LG"/>
-                                        <constraint firstAttribute="width" constant="62" id="m6O-h5-H5t"/>
-                                    </constraints>
-                                    <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="4"/>
-                                    <state key="normal" backgroundImage="Assets/Icons/HomeSend.png">
-                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                    </state>
-                                    <connections>
-                                        <action selector="sendButtonPressed:" destination="-1" eventType="touchUpInside" id="c0g-aY-dgk"/>
-                                    </connections>
-                                </button>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pba-eB-LD4" customClass="LKBadgeView">
-                                    <rect key="frame" x="62" y="3" width="30" height="20"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="20" id="ZHP-sQ-xmx"/>
-                                        <constraint firstAttribute="width" constant="30" id="uwp-HI-CpC"/>
-                                    </constraints>
-                                </view>
-                            </subviews>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sao-uL-Ezk" userLabel="Send">
+                            <rect key="frame" x="269" y="34" width="62" height="62"/>
                             <constraints>
-                                <constraint firstItem="Pba-eB-LD4" firstAttribute="trailing" secondItem="sao-uL-Ezk" secondAttribute="trailing" constant="10" id="0So-6N-Tb2"/>
-                                <constraint firstItem="sao-uL-Ezk" firstAttribute="top" secondItem="AFb-Nj-ssH" secondAttribute="top" constant="8" id="0Ud-4p-pyV"/>
-                                <constraint firstItem="Pba-eB-LD4" firstAttribute="top" secondItem="sao-uL-Ezk" secondAttribute="top" constant="-5" id="2ka-Bt-wop"/>
-                                <constraint firstItem="sao-uL-Ezk" firstAttribute="leading" secondItem="AFb-Nj-ssH" secondAttribute="leading" constant="20" id="nKo-KU-en0"/>
+                                <constraint firstAttribute="height" constant="62" id="NpX-MF-4LG"/>
+                                <constraint firstAttribute="width" constant="62" id="m6O-h5-H5t"/>
+                            </constraints>
+                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="4"/>
+                            <state key="normal" backgroundImage="Assets/Icons/HomeSend.png">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="sendButtonPressed:" destination="-1" eventType="touchUpInside" id="c0g-aY-dgk"/>
+                            </connections>
+                        </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pba-eB-LD4" customClass="LKBadgeView">
+                            <rect key="frame" x="311" y="29" width="30" height="20"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="ZHP-sQ-xmx"/>
+                                <constraint firstAttribute="width" constant="30" id="uwp-HI-CpC"/>
                             </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" red="0.9137254901960784" green="0.9137254901960784" blue="0.9137254901960784" alpha="0.70000000000000007" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="QUv-33-Ffw" secondAttribute="bottom" id="3ue-uG-MlX"/>
-                        <constraint firstAttribute="width" secondItem="AFb-Nj-ssH" secondAttribute="width" multiplier="2" constant="1" id="6WC-ZB-Uzk"/>
-                        <constraint firstAttribute="trailing" secondItem="AFb-Nj-ssH" secondAttribute="trailing" id="9c3-H0-Z9c"/>
-                        <constraint firstAttribute="width" secondItem="QUv-33-Ffw" secondAttribute="width" multiplier="2" id="B8d-2a-LMA"/>
-                        <constraint firstItem="QUv-33-Ffw" firstAttribute="top" secondItem="MYj-g7-RXb" secondAttribute="top" id="Bks-xe-qgc"/>
-                        <constraint firstItem="QUv-33-Ffw" firstAttribute="leading" secondItem="MYj-g7-RXb" secondAttribute="leading" id="Swa-xn-lyo"/>
-                        <constraint firstAttribute="height" constant="89" id="fAN-cS-318"/>
-                        <constraint firstItem="AFb-Nj-ssH" firstAttribute="top" secondItem="MYj-g7-RXb" secondAttribute="top" id="ifv-cs-ewK"/>
-                        <constraint firstAttribute="bottom" secondItem="AFb-Nj-ssH" secondAttribute="bottom" id="rpL-Jb-Klz"/>
+                        <constraint firstItem="KTE-xE-giG" firstAttribute="top" secondItem="MYj-g7-RXb" secondAttribute="top" constant="10" id="FMe-Eg-i7J"/>
+                        <constraint firstItem="sao-uL-Ezk" firstAttribute="trailing" secondItem="Pba-eB-LD4" secondAttribute="trailing" constant="-10" id="XeJ-0g-ndD"/>
+                        <constraint firstAttribute="height" constant="106" id="fAN-cS-318"/>
+                        <constraint firstItem="sao-uL-Ezk" firstAttribute="top" secondItem="Pba-eB-LD4" secondAttribute="top" constant="5" id="k5l-C7-ckE"/>
+                        <constraint firstAttribute="centerX" secondItem="KTE-xE-giG" secondAttribute="centerX" id="q1D-hC-0Rj"/>
+                        <constraint firstItem="sao-uL-Ezk" firstAttribute="top" secondItem="KTE-xE-giG" secondAttribute="bottom" constant="8" id="qWz-gi-mHs"/>
+                        <constraint firstAttribute="bottom" secondItem="sao-uL-Ezk" secondAttribute="bottom" constant="10" id="roE-ii-HqH"/>
+                        <constraint firstAttribute="centerX" secondItem="sao-uL-Ezk" secondAttribute="centerX" id="uvZ-qh-MbS"/>
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kHh-uZ-vK1">
-                    <rect key="frame" x="0.0" y="89" width="600" height="447"/>
+                    <rect key="frame" x="0.0" y="106" width="600" height="430"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="1" minimumInteritemSpacing="1" id="kcj-Dt-vx5" customClass="DFBadgingCollectionViewFlowLayout">
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -136,7 +94,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Assets/Icons/HomeInbox.png" width="16" height="16"/>
         <image name="Assets/Icons/HomeSend.png" width="16" height="16"/>
     </resources>
 </document>
