--- a/strand/iOS/Strand/Strand/DFOutgoingCardContentView.xib
+++ b/strand/iOS/Strand/Strand/DFOutgoingCardContentView.xib
@@ -50,7 +50,7 @@
                         <constraint firstAttribute="height" constant="30" id="VnS-ip-Azx"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done" enablesReturnKeyAutomatically="YES"/>
                 </textField>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
