--- a/peanut/arbus/templates/admin/userbaseSummary.html
+++ b/peanut/arbus/templates/admin/userbaseSummary.html
@@ -83,91 +83,27 @@
 <script src="/static/jquery.timeago.js"></script>
 <body>
 <div class="ui-content">
-	<div class='ui-server-id' id='ui-server-id'>
-	</div>
+	<div class='ui-server-id' id='ui-server-id'></div>
 	<div class='top-summary'>
 
-	<div class='top-table'>
-		<div class='ui-header center'> Counts </div>
-		<table class='ui-table' cellpadding='3'>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Users </td>
-				<td class='counts'> {{ peopleCounts.all }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Friends </td>
-				<td class='counts'> {{ peopleCounts.friends }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> ShareInstances </td>
-				<td class='counts'> {{ userCounts.all }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (shared) </td>
-				<td class='counts'> {{ peopleCounts.photosShared|intcomma  }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (metadata) </td>
-				<td class='counts'> {{ peopleCounts.photosMetadata|intcomma }} </td>
-			</tr>
-
-		</table>
-	</div>				
-	<div class='top-table'>
-		<div class='ui-header center'> Stats </div>
-		<table class='ui-table' cellpadding='3'>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Friends/User </td>
-				<td class='counts'> {{ statsCounts.friendsPerUser|floatformat:1 }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> ShareInstances/User </td>
-				<td class='counts'> {{ statsCounts.sisPerUser|floatformat:1 }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (shared)/User </td>
-				<td class='counts'> {{ statsCounts.photosSharedPerUser|floatformat:1 }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos (metadata)/User </td>
-				<td class='counts'> {{ statsCounts.photosMetadataPerUser|floatformat:0|intcomma  }} </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> Photos Shared </td>
-				<td class='counts' title='{{ statsCounts.percentPhotosShared|floatformat:2 }}'> {{ statsCounts.percentPhotosShared|floatformat:1 }}% </td>
-			</tr>
-
-		</table>
-	</div>	
-
-	<div class='top-table'>
-		<div class='ui-header center'> Split by users </div>
-		<table class='ui-table' cellpadding='3'>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> w/ 2 people </td>
-				<td class='counts right title="{{ userCounts.b1 }}"'> {{ userCounts.b1p|floatformat:1 }}% </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> w/ 3 people </td>
-				<td class='counts right title="{{ userCounts.b2 }}"'> {{ userCounts.b2p|floatformat:1 }}% </td>
-			</tr>			
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> w/ 4 people </td>
-				<td class='counts right title="{{ userCounts.b3 }}"'> {{ userCounts.b3p|floatformat:1 }}% </td>
-			</tr>
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> w/ 5 people </td>
-				<td class='counts right title="{{ userCounts.b4 }}"'> {{ userCounts.b4p|floatformat:1 }}% </td>
-			</tr>			
-			<tr class='ui-row' >
-				<td class='col1 right b-r'> w/ 5+ people </td>
-				<td class='counts right title="{{ userCounts.b5 }}"'> {{ userCounts.b5p|floatformat:1 }}%	 </td>
-			</tr>
-
-		</table>
+		<div class='top-table'>
+			<div class='ui-header center'> Counts </div>
+			<table class='ui-table' cellpadding='3'>
+				<tr class='ui-row' >
+					<td class='col1 right b-r'> Users </td>
+					<td class='counts'> {{ peopleCounts.all }} </td>
+				</tr>
+				<tr class='ui-row' >
+					<td class='col1 right b-r'> Friends </td>
+					<td class='counts'> {{ peopleCounts.friends }} </td>
+				</tr>
+				<tr class='ui-row' >
+					<td class='col1 right b-r'> ShareInstances </td>
+					<td class='counts'> {{ peopleCounts.totalShareInstances }} </td>
+				</tr>
+			</table>
+		</div>	
 	</div>
-
-</div>
 
 	{% if swapUserList %}
 	<div class='bottom-summary'>
@@ -175,7 +111,6 @@
 		<table class='ui-table' cellpadding='3'>
 			<tr class='ui-row-header' >
 				<th class='before b-r' colspan='3' > </th>
-				<th class='before b-r' colspan='2' > Photos </th>
 				<th class='before b-r' colspan='1' > Shared <br> Instances </th>
 				<th class='actions b-r' colspan='3'> Actions (7d) </th>
 				<th class='notifications b-r' colspan='2'> Notifications </th>
@@ -185,18 +120,15 @@
 				<td class='userid b-r'> ID </td>
 				<td class='name b-r'> Name </td>
 				<td class='created b-r'> Created </td>
-				<td class='db-count center b-r'> Metadata </td>
-				<td class='gps-count center b-r'> with GPS <br> (%)</td>
 				<td class='si center b-r'> 7d | all </td>
 				<td class='photos_eval center b-r' > Photos <br> Eval'ed </td>
 				<td class='favs center b-r'> Favs </td>
 				<td class='comments center b-r'> Comments </td>
 				<td class='notifications center b-r'> Sent <br> (7d)</td>
 				<td class='last-not-timestamp b-r'> Timestamp </td>
-				<!-- <td class='location b-r'> GPS </td> -->
 				<td class='contacts b-r'> Friends | <br> Contacts </td> 
 				<td class='last-build b-r'> Last <br> Build </td>
-				<td class='last-uploaded-timestamp b-r'> Last Upload </td>
+				<!--<td class='last-uploaded-timestamp b-r'> Last Upload </td>-->
 				<td class='last-action-timestamp b-r'> Last Action </td>
 				<td class='location-timestamp b-r'> Last Location <br> update </td>				
 				<td class='last-checkin-timestamp b-r'> Last Checkin </td>
@@ -206,25 +138,15 @@
 				<td class='userid b-r' title='{{ entry.user.phone_number }}'> <a target=_blank href='/strand/api/swap_inbox?user_id={{ entry.user.id }}'>{{ entry.user.id }}</a></td>
 				<td class='name b-r'> {{ entry.user.display_name}}</td>
 				<td class='created timeago b-r' title="{{ entry.userCreated }}">  </td>
-				<td class='db-count right b-r'>	{{ entry.metadataCount }} </td>	
-				<td class='gps-count center b-r'> {{ entry.photosWithGPS|floatformat:0 }}</td>					
 				<td class='si right b-r'> {{ entry.weeklyPhotos }} | {{ entry.user.thumbsCount }} </td>
 				<td class='photos_eval center b-r' > {{ entry.weeklyPhotoEvals }} </td>
 				<td class='favs center b-r'> {{entry.weeklyFavs }} </td>
 				<td class='comments center b-r'> {{entry.weeklyComments }} </td>
 				<td class='notifications right b-r'> {{ entry.notifications }} </td>
-				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>				
-				<!--<td class='location right b-r'> 
-					{% if entry.user.last_location_point %}
-					<a target=_blank href='http://maps.google.com?q={{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}'>{{ entry.user.last_location_point.y }},{{entry.user.last_location_point.x}}</a>
-					{% endif %}
-					{% if entry.user.last_location_accuracy %}
-					(&plusmn;{{ entry.user.last_location_accuracy }}m)
-					{% endif %}
-				</td>-->
+				<td class='last-not-timestamp right timeago b-r' title='{{ entry.lastNotifSent }}'> </td>
 				<td class='contacts b-r center'> {{ entry.friendCount}} | {{ entry.contactCount }} </td>
 				<td class='last-build b-r'> {{ entry.build }} </td>
-				<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>
+				<!--<td class='last-uploaded-timestamp timeago b-r' title="{{ entry.lastUploadTime }}"> </td>-->
 				<td class='last-action-timestamp timeago b-r' title="{{ entry.lastActionTime }}"> </td>
 				<td class='location-timestamp timeago b-r' title='{{ entry.lastLocationTimestamp}}'></td>				
 				<td class='last-checkin-timestamp timeago b-r' title="{{ entry.lastCheckinTime }}"> </td>				
