--- a/strand/iOS/Strand/Strand/DFCommentToolbar.xib
+++ b/strand/iOS/Strand/Strand/DFCommentToolbar.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,49 +11,84 @@
             <rect key="frame" x="0.0" y="0.0" width="535" height="52"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eIR-5E-V6t" customClass="DFProfileStackView">
-                    <rect key="frame" x="8" y="8" width="36" height="36"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="eIR-5E-V6t" secondAttribute="height" multiplier="1:1" id="7qB-pX-Zdt"/>
-                    </constraints>
-                </view>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a comment" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QMA-mD-Dv1">
-                    <rect key="frame" x="52" y="11" width="445" height="30"/>
+                <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a comment" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QMA-mD-Dv1">
+                    <rect key="frame" x="8" y="11" width="477" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="send" enablesReturnKeyAutomatically="YES"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rua-gy-tSe">
-                    <rect key="frame" x="505" y="15" width="22" height="22"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="22" id="oQC-v9-H3q"/>
-                        <constraint firstAttribute="width" constant="22" id="p2Y-vi-ViU"/>
-                    </constraints>
-                    <state key="normal">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rua-gy-tSe" userLabel="Like Button">
+                    <rect key="frame" x="8" y="11" width="30" height="30"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <inset key="titleEdgeInsets" minX="3" minY="0.0" maxX="-3" maxY="0.0"/>
+                    <state key="normal" title="Like">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="likeButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="lH3-cc-wsi"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3O-kF-lYA" userLabel="Comment Button">
+                    <rect key="frame" x="54" y="11" width="68" height="30"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <inset key="titleEdgeInsets" minX="3" minY="0.0" maxX="-3" maxY="0.0"/>
+                    <state key="normal" title="Comment">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="commentButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="rCQ-px-8uZ"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jgp-IN-H1j" userLabel="More button">
+                    <rect key="frame" x="497" y="3" width="30" height="46"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                    <state key="normal" title="•••">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="moreButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="83M-p7-Wjg"/>
+                    </connections>
+                </button>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8D-Vm-E5G" userLabel="Send button">
+                    <rect key="frame" x="493" y="11" width="34" height="29"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="34" id="d4W-aq-ZqV"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="Send">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <state key="disabled">
+                        <color key="titleColor" white="0.66666666666666663" alpha="0.5" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="sendButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="RMP-LV-t9d"/>
+                    </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Rua-gy-tSe" secondAttribute="trailing" constant="8" id="51Z-vu-hXG"/>
-                <constraint firstItem="QMA-mD-Dv1" firstAttribute="centerY" secondItem="eIR-5E-V6t" secondAttribute="centerY" id="CZo-xW-oIT"/>
-                <constraint firstItem="eIR-5E-V6t" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="HBX-so-fbg"/>
-                <constraint firstItem="Rua-gy-tSe" firstAttribute="centerY" secondItem="QMA-mD-Dv1" secondAttribute="centerY" id="Rc3-47-aZx"/>
-                <constraint firstAttribute="bottom" secondItem="eIR-5E-V6t" secondAttribute="bottom" constant="8" id="cGy-qa-bQu"/>
-                <constraint firstAttribute="trailing" secondItem="QMA-mD-Dv1" secondAttribute="trailing" priority="999" constant="8" id="e3T-xg-LDV"/>
-                <constraint firstItem="QMA-mD-Dv1" firstAttribute="leading" secondItem="eIR-5E-V6t" secondAttribute="trailing" constant="8" id="hrK-RL-70b"/>
-                <constraint firstItem="eIR-5E-V6t" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="tyf-dw-WCe"/>
-                <constraint firstItem="Rua-gy-tSe" firstAttribute="leading" secondItem="QMA-mD-Dv1" secondAttribute="trailing" constant="8" id="vFJ-eH-heU"/>
+                <constraint firstItem="QMA-mD-Dv1" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="8UE-2E-6de"/>
+                <constraint firstAttribute="trailing" secondItem="A8D-Vm-E5G" secondAttribute="trailing" constant="8" id="8ye-vq-RtQ"/>
+                <constraint firstAttribute="centerY" secondItem="o3O-kF-lYA" secondAttribute="centerY" id="ChX-0m-G7L"/>
+                <constraint firstAttribute="centerY" secondItem="Rua-gy-tSe" secondAttribute="centerY" id="FqG-hY-D1X"/>
+                <constraint firstAttribute="centerY" secondItem="QMA-mD-Dv1" secondAttribute="centerY" id="Wg3-Mt-rif"/>
+                <constraint firstAttribute="centerY" secondItem="A8D-Vm-E5G" secondAttribute="centerY" id="Wwb-Xr-wOu"/>
+                <constraint firstAttribute="centerY" secondItem="Jgp-IN-H1j" secondAttribute="centerY" id="Yf0-z8-Kbq"/>
+                <constraint firstItem="o3O-kF-lYA" firstAttribute="leading" secondItem="Rua-gy-tSe" secondAttribute="trailing" constant="16" id="atH-ai-GrV"/>
+                <constraint firstItem="Rua-gy-tSe" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="i3P-1z-6af"/>
+                <constraint firstItem="A8D-Vm-E5G" firstAttribute="leading" secondItem="QMA-mD-Dv1" secondAttribute="trailing" constant="8" id="n3V-1P-0jC"/>
+                <constraint firstAttribute="trailing" secondItem="Jgp-IN-H1j" secondAttribute="trailing" constant="8" id="tgi-un-WEE"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
+                <outlet property="commentButton" destination="o3O-kF-lYA" id="aN1-Xo-1mT"/>
                 <outlet property="likeButton" destination="Rua-gy-tSe" id="GiK-cv-CqV"/>
-                <outlet property="profileStackView" destination="eIR-5E-V6t" id="ZJg-mq-S5g"/>
+                <outlet property="moreButton" destination="Jgp-IN-H1j" id="h7Z-qe-nSq"/>
+                <outlet property="sendButton" destination="A8D-Vm-E5G" id="wbL-yH-PTI"/>
                 <outlet property="textField" destination="QMA-mD-Dv1" id="7wz-VU-EhI"/>
             </connections>
-            <point key="canvasLocation" x="323.5" y="700"/>
+            <point key="canvasLocation" x="319.5" y="663"/>
         </view>
     </objects>
 </document>
